test/bad/classes/struct03.px

class Struct def
    c: Char = 5
